language/tests/regent/run_pass/fspace_empty.rg
-- Copyright 2018 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

import "regent"

fspace empty {
}

task main()
  -- Note: Need the other region here to trigger inline mapping
  var r = region(ispace(int1d, 1), int)
  var s = region(ispace(int1d, 5), empty)

  r[0] = 2
end
regentlib.start(main)
